// Copyright (c) Abstract Machines
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package channels.v1;
option go_package = "github.com/absmach/supermq/internal/grpc/channels/v1";


service ChannelsService {
  rpc Authorize(AuthzReq)returns(AuthzRes) {}
  rpc RemoveThingConnections(RemoveThingConnectionsReq)returns(RemoveThingConnectionsRes) {}
  rpc UnsetParentGroupFromChannels(UnsetParentGroupFromChannelsReq)returns(UnsetParentGroupFromChannelsRes){}
}

message RemoveThingConnectionsReq {
  string thing_id = 1;
}

message RemoveThingConnectionsRes {}

message UnsetParentGroupFromChannelsReq {
  string parent_group_id = 1;
}

message UnsetParentGroupFromChannelsRes {}

message AuthzReq {
  string domain_id = 1;
  string client_id = 2;
  string client_type = 3;
  string channel_id = 4;
  string permission = 5;
}

message AuthzRes {
  bool authorized = 1;
}
